[imad-console] Updates article-one.html

--- a/article-one.html
+++ b/article-one.html
@@ -1,4 +1,26 @@
 <html> 
-
+    <head>
+        <title>Article one Siddharth</title>
+    </head>
+    <body>
+        <div>
+            <a href="/">Home</a>
+        </div>
+        <hr/>
+        <h3>
+            Article one
+        </h3>
+        <div>
+            Aug 11,2017
+        </div>
+        <div>
+            <p>This is the cotent space for my first article.This is the cotent space for my first article.This is the cotent space for my first article.This is the cotent space for my first article.This is the cotent space for my first article.This is the cotent space for my first article.
+            </p>
+            <p>This is the cotent space for my first article.This is the cotent space for my first article.This is the cotent space for my first article.This is the cotent space for my first article.This is the cotent space for my first article.This is the cotent space for my first article.
+            </p>
+            <p>This is the cotent space for my first article.This is the cotent space for my first article.This is the cotent space for my first article.This is the cotent space for my first article.This is the cotent space for my first article.This is the cotent space for my first article.
+            </p>
+        </div>
+    </body>
 
 </html>
