--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -2,6 +2,7 @@
 <html> 
     <head>
         <title>Article one Siddharth</title>
+        <meta name="view port" content="width= device-width, initial-scale=1" />
     </head>
     <body>
         <div>
