--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -2,6 +2,7 @@
 <html> 
     <head>
         <title>Article two Siddharth</title>
+         <meta name="view port" content="width= device-width, initial-scale=1" />
     </head>
     <body>
         <div>
