[imad-console] Updates ui/article-two.html

--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -16,12 +16,9 @@
             Aug 11,2017
         </div>
         <div>
-            <p>This is the cotent space for my first article.This is the cotent space for my first article.This is the cotent space for my first article.This is the cotent space for my first article.This is the cotent space for my first article.This is the cotent space for my first article.
+            <p>This is mysecond article.
             </p>
-            <p>This is the cotent space for my first article.This is the cotent space for my first article.This is the cotent space for my first article.This is the cotent space for my first article.This is the cotent space for my first article.This is the cotent space for my first article.
-            </p>
-            <p>This is the cotent space for my first article.This is the cotent space for my first article.This is the cotent space for my first article.This is the cotent space for my first article.This is the cotent space for my first article.This is the cotent space for my first article.
-            </p>
+
         </div>
     </body>
 
