--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -4,7 +4,7 @@
         <title>Article one Siddharth</title>
         <meta name="view port" content="width= device-width, initial-scale=1" />
         <style>
-            container
+           . container
             {
                 max-width: 800px;
                 margin:0 auto;
