--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -6,11 +6,15 @@
         <style>
            .container
             {
-                max-width: 800px;
-                margin: 0 auto;
-                color: grey;
-                font-family: sans-serif;
-            }
+               .container {
+                    max-width: 800px;
+                    margin: 0 auto;
+                    color: #595756;
+                    font-family: sans-serif;
+                    padding-top: 80px;
+                    padding-left: 20px;
+                    padding-right: 20px;
+                            }
         </style>
     </head>
     <body>
