[imad-console] Updates ui/article-two.html

--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -3,22 +3,36 @@
     <head>
         <title>Article two Siddharth</title>
          <meta name="view port" content="width= device-width, initial-scale=1" />
+        <style>
+           .container
+            {
+                    max-width: 800px;
+                    margin: 0 auto;
+                    color: #595756;
+                    font-family: sans-serif;
+                    padding-top: 80px;
+                    padding-left: 20px;
+                    padding-right: 20px;
+           }
+        </style>
     </head>
     <body>
-        <div>
-            <a href="/">Home</a>
-        </div>
-        <hr/>
-        <h3>
-            Article two
-        </h3>
-        <div>
-            Aug 11,2017
-        </div>
-        <div>
-            <p>This is my second article.
-            </p>
-
+        <div class="container">
+            <div>
+                <a href="/">Home</a>
+            </div>
+            <hr/>
+            <h3>
+                Article two
+            </h3>
+            <div>
+                Aug 11,2017
+            </div>
+            <div>
+                <p>This is my second article.
+                </p>
+    
+            </div>
         </div>
     </body>
 
