--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -3,18 +3,7 @@
     <head>
         <title>Article one Siddharth</title>
         <meta name="view port" content="width= device-width, initial-scale=1" />
-        <style>
-           .container
-            {
-                    max-width: 800px;
-                    margin: 0 auto;
-                    color: #595756;
-                    font-family: sans-serif;
-                    padding-top: 80px;
-                    padding-left: 20px;
-                    padding-right: 20px;
-           }
-        </style>
+         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
         <div class="container">
