--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html> 
     <head>
-        <title>Article three Siddharth</title>
+        <title>Article three | Siddharth</title>
          <meta name="view port" content="width= device-width, initial-scale=1" />
           <link href="/ui/style.css" rel="stylesheet" />
     </head>
