--- a/ui/index.html
+++ b/ui/index.html
@@ -11,7 +11,8 @@
         <div class="center text-big bold">
             Hi! I am Siddharth, and this is my first web app.
         </div>
-        <script type="text/javascript" src="/ui/main.js">
+        <script>
+              alert('hello everyone');
         </script>
     </body>
 </html>
