[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -11,8 +11,7 @@
         <div class="center text-big bold">
             Hi! I am Siddharth, and this is my first web app.
         </div>
-        <script>
-              alert('hello everyone');
+        <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
 </html>
