--- a/ui/index.html
+++ b/ui/index.html
@@ -4,12 +4,20 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
-        <div class="center">
-            <img id = 'madi' src="/ui/madi.png" class="img-medium"/>
-        </div>
-        <br>
-        <div class="center text-big bold">
-            Hi! I am Siddharth, and this is my first web app.
+        <div class="container">
+                <div class="center">
+                    <img id = 'madi' src="https://pbs.twimg.com/profile_images/893529124161036288/f5z3AEKF_400x400.jpg" class="img-medium"/>
+                </div>
+                <hr/>
+                <br>
+                <h3>Personal</h3>
+                <div>
+                    Hie, my name is Siddharth Singh
+                </div>
+                <h3>Professional</h3>
+                <div class="footer">
+                    
+                </div>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
