[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -15,6 +15,9 @@
                     Hie, my name is Siddharth Singh
                 </div>
                 <h3>Professional</h3>
+                <div>
+                    I am studying at Acropolis Institution.
+                </div>
                 <div class="footer">
                     
                 </div>
