[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div class="container">
-                <div class="center">
+                <div class= "center">
                     <img id = 'madi' src="https://pbs.twimg.com/profile_images/893529124161036288/f5z3AEKF_400x400.jpg" class="img-medium"/>
                 </div>
                 <hr/>
@@ -16,7 +16,7 @@
                 </div>
                 <h3>Professional</h3>
                 <div>
-                    I am studying at Acropolis Institution.
+                    I am studying at Acropolis Institution
                 </div>
                 <div class="footer">
                     
